# techniki_programowania3

./: .gitignore  CMakeLists.txt  README.md
raport/: Presentation.pptx
src/: 1d2d.cpp  DFT_IDFT.cpp  Fourier.cpp  Signal.cpp  addsignals.cpp  correlation.cpp  dft.cpp  filtering1d.cpp  generator.cpp  headers.h  idft.cpp  main.cpp  plot.cpp  test.py  test_module.py
